# ChatServer

./: .gitignore  CMakeLists.txt  README.md
include/: public.h  public.hpp
include/server/: chatserver.h  chatserver.hpp  chatservice.h  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.h  friendmodel.hpp  group.h  group.hpp  groupmodel.h  groupmodel.hpp  groupuser.h  groupuser.hpp  offlinemessagemodel.h  offlinemessagemodel.hpp  user.hpp  usermodel.h  usermodel.hpp
include/server/redis/: redis.h  redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
